2010-01-20 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.*, mainwindow.*: Jack transport sync capability
	integrated as a user choice. Jack sync object is created/destroyed
	as a child of seqdriver by toggling jackSync toolbar button. 
	Alsa queue is started at 0 on reception of jack transport start
	regardless the current jack transport position. Jack transport
	position is used as calibrator for alsa event scheduling. On 
	reception of jack shutdown/connect fail, an event is emitted 
	toggling back the jack transport button, which stops the queue and
	switches back to internal clock. 
	* jacksync.cpp, jacksync.h: jackSync class added providing jack
	transport data and emitting signals on transport start and jack
	shutdown. 
	* jacktr.xpm: icon added.
	* configure.ac, src/Makefile.am, src/pixmaps/Makefile.am: jack 
	dependency added, new files added to package.

2010-01-14 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.cpp: Session name added to XML file, recent files menu
	added with code from AMS
	* arpwidget.*: missing reading-skips of unknown xml elements added

2010-01-13 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.*, arpwidget.*, lfowidget.*, seqwidget.*: Session file
	format changed to XML, file extension changed to .qmax, old text
	files can be imported by selecting .qma files in fileOpen dialog 
	filter.
	
2010-01-10 Frank Kober <goemusic@yahoo.fr>
	* arpdata.cpp, midicctable.cpp: mute MIDI controller behaviour
	extended: if min=max (default), a control value=127 toggles state.
	if min!=max, control value=min mutes, control value=max unmutes
	
2010-01-09 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.*, arp/lfo/seqwidget.*, midicctable.cpp: MIDI Channel 
	added to controller filter
	
2010-01-08 Guido Scholz <guido.scholz@bayernline.de>
	* mainwindow.*: Handler for SIGINT added to handle unsaved or
	changed files more carefully at program termination. Handler for
	SIGUSR1 added to provide support for LADISH level 1.
